--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <main>
             <section class="game">
                 <h1>Tic <span class="red">Tac</span> Toe</h1>
+                <p id="instructions">Tap the "-" once for X and twice for O</p>
                 <div class="buttonDiv">
                     <button id="a1" class="button" onclick="swapBox1(); determineWinner();">-</button>
                     <button id="a2" class="button" onclick="swapBox2(); determineWinner();">-</button>
